--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:paddingBottom="40dp"
-            android:src="@mipmap/udb" />
+            android:src="@mipmap/logo" />
 
         <TextView
             style="@style/TextAppearance.MaterialComponents.Headline6"
