--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:paddingBottom="20dp"
-            android:src="@mipmap/user"/>
+            android:src="@mipmap/ususario"/>
 
         <TextView
             android:layout_width="wrap_content"
