--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -325,6 +325,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="125dp"
+        android:onClick="guardar"
         android:text="Finalizar Orden"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -337,6 +338,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="125dp"
         android:layout_marginEnd="5dp"
+        android:onClick="historial"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button4"
         app:layout_constraintTop_toBottomOf="@+id/textView12"
